<resources>
    <string name="app_name">Andela Schools</string>
    <string name="login_text">Now! Quick Login Use Touch ID</string>
    <string name="use_touch">Use Touch ID</string>
    <string name="register">Register Now</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="ft_login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="staffs">Staffs</string>
    <string name="students">Students</string>
    <string name="signup">Sign up</string>
    <string name="back">back</string>
    <string name="temrs_conditions"> <u> "terms &amp; conditions" </u> </string>
    <string name="log_in"><u>Log in</u></string>
    <string name="courses_offering">Course Offering</string>
    <string name="level">Level</string>
    <string name="recent_activity">Recent Activity</string>

    <string name="dialog_registering">Registering … </string>
    <string name="dialog_creating_user">Creating user …</string>

    <string-array name="login_modes">
        <item>Student</item>
        <item>Staff</item>
    </string-array>
</resources>