<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.StaffsRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="16dp">

                <EditText
                    android:id="@+id/staffs_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_name"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="16dp"
                    android:hint="Name"
                    android:paddingStart="10dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/staffs_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_last_name"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="16dp"
                    android:hint="Last name"
                    android:paddingStart="10dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/staffs_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="16dp"
                    android:hint="Email"
                    android:paddingStart="10dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="16dp"
                    android:hint="Password"
                    android:paddingStart="10dp"
                    android:textStyle="normal" />


                    <EditText
                        android:id="@+id/course_offered"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/ic_books"
                        android:background="@drawable/rounded_edit_text"
                        android:drawableTint="@color/colorPrimary"
                        android:drawablePadding="16dp"
                        android:hint="@string/courses_offering"
                        android:paddingStart="10dp"
                        android:textStyle="normal" >

                    </EditText>

                <EditText
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableTint="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_level"
                    android:drawablePadding="16dp"
                    android:hint="@string/level"
                    android:paddingStart="10dp"
                    android:textStyle="normal" >
                </EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="I accept "
                        android:layout_marginStart="16dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temrs_conditions"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_button"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>